deal with zeroes

--- a/regression.ipynb
+++ b/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 259,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,18 +64,253 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 260,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "replacezeros() missing 1 required positional argument: 'col'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Ashimory\\Documents\\GitHub\\regression\\regression.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Ashimory/Documents/GitHub/regression/regression.ipynb#ch0000008?line=15'>16</a>\u001b[0m \u001b[39m# replace nan with continent avg\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Ashimory/Documents/GitHub/regression/regression.ipynb#ch0000008?line=16'>17</a>\u001b[0m df[col_name] \u001b[39m=\u001b[39m df_group_cont[col_name]\u001b[39m.\u001b[39mapply(\u001b[39mlambda\u001b[39;00m x: x\u001b[39m.\u001b[39mfillna(x\u001b[39m.\u001b[39mmean()))\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Ashimory/Documents/GitHub/regression/regression.ipynb#ch0000008?line=17'>18</a>\u001b[0m df_group_cont[col_name]\u001b[39m.\u001b[39mapply(replacezeros())\n",
-      "\u001b[1;31mTypeError\u001b[0m: replacezeros() missing 1 required positional argument: 'col'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "196    0.0\n",
+      "197    0.0\n",
+      "198    0.0\n",
+      "199    0.0\n",
+      "200    0.0\n",
+      "201    0.0\n",
+      "202    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "126    0.0\n",
+      "127    0.0\n",
+      "128    0.0\n",
+      "129    0.0\n",
+      "130    0.0\n",
+      "131    0.0\n",
+      "132    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "175    0.0\n",
+      "176    0.0\n",
+      "177    0.0\n",
+      "178    0.0\n",
+      "179    0.0\n",
+      "180    0.0\n",
+      "181    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "140    0.0\n",
+      "141    0.0\n",
+      "142    0.0\n",
+      "143    0.0\n",
+      "144    0.0\n",
+      "145    0.0\n",
+      "146    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "238    0.0\n",
+      "239    0.0\n",
+      "240    0.0\n",
+      "241    0.0\n",
+      "242    0.0\n",
+      "243    0.0\n",
+      "244    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "259    0.0\n",
+      "260    0.0\n",
+      "261    0.0\n",
+      "262    0.0\n",
+      "263    0.0\n",
+      "264    0.0\n",
+      "265    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "259    0.0\n",
+      "260    0.0\n",
+      "261    0.0\n",
+      "262    0.0\n",
+      "263    0.0\n",
+      "264    0.0\n",
+      "265    0.0\n",
+      "Name: positive_rate, dtype: float64\n",
+      "273    0.0\n",
+      "274    0.0\n",
+      "275    0.0\n",
+      "276    0.0\n",
+      "277    0.0\n",
+      "278    0.0\n",
+      "279    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "343    0.0\n",
+      "344    0.0\n",
+      "345    0.0\n",
+      "346    0.0\n",
+      "347    0.0\n",
+      "348    0.0\n",
+      "349    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "378    0.0\n",
+      "379    0.0\n",
+      "380    0.0\n",
+      "381    0.0\n",
+      "382    0.0\n",
+      "383    0.0\n",
+      "384    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "525    0.0\n",
+      "526    0.0\n",
+      "527    0.0\n",
+      "528    0.0\n",
+      "529    0.0\n",
+      "530    0.0\n",
+      "531    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "518    0.0\n",
+      "519    0.0\n",
+      "520    0.0\n",
+      "521    0.0\n",
+      "522    0.0\n",
+      "523    0.0\n",
+      "524    0.0\n",
+      "Name: new_cases_per_million, dtype: float64\n",
+      "518    0.0\n",
+      "519    0.0\n",
+      "520    0.0\n",
+      "521    0.0\n",
+      "522    0.0\n",
+      "523    0.0\n",
+      "524    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "203    0.0\n",
+      "204    0.0\n",
+      "205    0.0\n",
+      "206    0.0\n",
+      "207    0.0\n",
+      "208    0.0\n",
+      "209    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "679    0.0\n",
+      "680    0.0\n",
+      "681    0.0\n",
+      "682    0.0\n",
+      "683    0.0\n",
+      "684    0.0\n",
+      "685    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "805    0.0\n",
+      "806    0.0\n",
+      "807    0.0\n",
+      "808    0.0\n",
+      "809    0.0\n",
+      "810    0.0\n",
+      "811    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "833    0.0\n",
+      "834    0.0\n",
+      "835    0.0\n",
+      "836    0.0\n",
+      "837    0.0\n",
+      "838    0.0\n",
+      "839    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "903    0.0\n",
+      "904    0.0\n",
+      "905    0.0\n",
+      "906    0.0\n",
+      "907    0.0\n",
+      "908    0.0\n",
+      "909    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "1043    0.0\n",
+      "1044    0.0\n",
+      "1045    0.0\n",
+      "1046    0.0\n",
+      "1047    0.0\n",
+      "1048    0.0\n",
+      "1049    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "371    0.0\n",
+      "372    0.0\n",
+      "373    0.0\n",
+      "374    0.0\n",
+      "375    0.0\n",
+      "376    0.0\n",
+      "377    0.0\n",
+      "Name: new_cases_per_million, dtype: float64\n",
+      "1001    0.0\n",
+      "1002    0.0\n",
+      "1003    0.0\n",
+      "1004    0.0\n",
+      "1005    0.0\n",
+      "1006    0.0\n",
+      "1007    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "1099    0.0\n",
+      "1100    0.0\n",
+      "1101    0.0\n",
+      "1102    0.0\n",
+      "1103    0.0\n",
+      "1104    0.0\n",
+      "1105    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "245    0.0\n",
+      "246    0.0\n",
+      "247    0.0\n",
+      "248    0.0\n",
+      "249    0.0\n",
+      "250    0.0\n",
+      "251    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "1162    0.0\n",
+      "1163    0.0\n",
+      "1164    0.0\n",
+      "1165    0.0\n",
+      "1166    0.0\n",
+      "1167    0.0\n",
+      "1168    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "1183    0.0\n",
+      "1184    0.0\n",
+      "1185    0.0\n",
+      "1186    0.0\n",
+      "1187    0.0\n",
+      "1188    0.0\n",
+      "1189    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "1155    0.0\n",
+      "1156    0.0\n",
+      "1157    0.0\n",
+      "1158    0.0\n",
+      "1159    0.0\n",
+      "1160    0.0\n",
+      "1161    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "1169    0.0\n",
+      "1170    0.0\n",
+      "1171    0.0\n",
+      "1172    0.0\n",
+      "1173    0.0\n",
+      "1174    0.0\n",
+      "1175    0.0\n",
+      "Name: new_cases_per_million, dtype: float64\n",
+      "1169    0.0\n",
+      "1170    0.0\n",
+      "1171    0.0\n",
+      "1172    0.0\n",
+      "1173    0.0\n",
+      "1174    0.0\n",
+      "1175    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n",
+      "1281    0.0\n",
+      "1282    0.0\n",
+      "1283    0.0\n",
+      "1284    0.0\n",
+      "1285    0.0\n",
+      "1286    0.0\n",
+      "1287    0.0\n",
+      "Name: new_cases_per_million, dtype: float64\n",
+      "1281    0.0\n",
+      "1282    0.0\n",
+      "1283    0.0\n",
+      "1284    0.0\n",
+      "1285    0.0\n",
+      "1286    0.0\n",
+      "1287    0.0\n",
+      "Name: new_deaths_per_million, dtype: float64\n"
      ]
     }
    ],
@@ -84,10 +319,7 @@
     "df_group_iso = df.groupby([\"iso_code\"])\n",
     "df_group_cont = df.groupby([\"continent\"])\n",
     "\n",
-    "def replacezeros(col):\n",
-    "    if (col == 0).all():\n",
-    "        print(col)\n",
-    "    return col\n",
+    "\n",
     "\n",
     "\n",
     "for col_name, col_data in df.iteritems():\n",
@@ -97,20 +329,23 @@
     "    df[col_name] = df_group_iso[col_name].apply(lambda x: x.fillna(x.mean()))\n",
     "    # replace nan with continent avg\n",
     "    df[col_name] = df_group_cont[col_name].apply(lambda x: x.fillna(x.mean()))\n",
-    "    df_group_cont[col_name].apply(replacezeros)\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# for col_name, col_data in df_group_iso:    \n",
-    "    # for col in col_data:\n",
-    "    #     if (col_data[col] == 0).all():\n",
-    "    #         print(col, col_data[col], col_name)\n"
+    "df_group_cont_mean = df_group_cont.mean()\n",
+    "# print(df_group_cont_mean)\n",
+    "for col_name, col_data in df_group_iso:    \n",
+    "    for col in col_data:\n",
+    "        if (col_data[col] == 0).all():\n",
+    "            # print(col, col_data[col], col_name)\n",
+    "            target = df.loc[df[\"iso_code\"] == col_name]\n",
+    "            # print(target, target[\"continent\"].iloc[0])\n",
+    "            # print(target[col])\n",
+    "            df.loc[df[\"iso_code\"] == col_name, col] = target[col].replace(0, df_group_cont_mean.at[target[\"continent\"].iloc[0], col])\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 261,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 262,
    "metadata": {},
    "outputs": [],
    "source": [
