--- a/regression.ipynb
+++ b/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 263,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 264,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 265,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,256 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 267,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "196    0.0\n",
-      "197    0.0\n",
-      "198    0.0\n",
-      "199    0.0\n",
-      "200    0.0\n",
-      "201    0.0\n",
-      "202    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "126    0.0\n",
-      "127    0.0\n",
-      "128    0.0\n",
-      "129    0.0\n",
-      "130    0.0\n",
-      "131    0.0\n",
-      "132    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "175    0.0\n",
-      "176    0.0\n",
-      "177    0.0\n",
-      "178    0.0\n",
-      "179    0.0\n",
-      "180    0.0\n",
-      "181    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "140    0.0\n",
-      "141    0.0\n",
-      "142    0.0\n",
-      "143    0.0\n",
-      "144    0.0\n",
-      "145    0.0\n",
-      "146    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "238    0.0\n",
-      "239    0.0\n",
-      "240    0.0\n",
-      "241    0.0\n",
-      "242    0.0\n",
-      "243    0.0\n",
-      "244    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "259    0.0\n",
-      "260    0.0\n",
-      "261    0.0\n",
-      "262    0.0\n",
-      "263    0.0\n",
-      "264    0.0\n",
-      "265    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "259    0.0\n",
-      "260    0.0\n",
-      "261    0.0\n",
-      "262    0.0\n",
-      "263    0.0\n",
-      "264    0.0\n",
-      "265    0.0\n",
-      "Name: positive_rate, dtype: float64\n",
-      "273    0.0\n",
-      "274    0.0\n",
-      "275    0.0\n",
-      "276    0.0\n",
-      "277    0.0\n",
-      "278    0.0\n",
-      "279    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "343    0.0\n",
-      "344    0.0\n",
-      "345    0.0\n",
-      "346    0.0\n",
-      "347    0.0\n",
-      "348    0.0\n",
-      "349    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "378    0.0\n",
-      "379    0.0\n",
-      "380    0.0\n",
-      "381    0.0\n",
-      "382    0.0\n",
-      "383    0.0\n",
-      "384    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "525    0.0\n",
-      "526    0.0\n",
-      "527    0.0\n",
-      "528    0.0\n",
-      "529    0.0\n",
-      "530    0.0\n",
-      "531    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "518    0.0\n",
-      "519    0.0\n",
-      "520    0.0\n",
-      "521    0.0\n",
-      "522    0.0\n",
-      "523    0.0\n",
-      "524    0.0\n",
-      "Name: new_cases_per_million, dtype: float64\n",
-      "518    0.0\n",
-      "519    0.0\n",
-      "520    0.0\n",
-      "521    0.0\n",
-      "522    0.0\n",
-      "523    0.0\n",
-      "524    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "203    0.0\n",
-      "204    0.0\n",
-      "205    0.0\n",
-      "206    0.0\n",
-      "207    0.0\n",
-      "208    0.0\n",
-      "209    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "679    0.0\n",
-      "680    0.0\n",
-      "681    0.0\n",
-      "682    0.0\n",
-      "683    0.0\n",
-      "684    0.0\n",
-      "685    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "805    0.0\n",
-      "806    0.0\n",
-      "807    0.0\n",
-      "808    0.0\n",
-      "809    0.0\n",
-      "810    0.0\n",
-      "811    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "833    0.0\n",
-      "834    0.0\n",
-      "835    0.0\n",
-      "836    0.0\n",
-      "837    0.0\n",
-      "838    0.0\n",
-      "839    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "903    0.0\n",
-      "904    0.0\n",
-      "905    0.0\n",
-      "906    0.0\n",
-      "907    0.0\n",
-      "908    0.0\n",
-      "909    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "1043    0.0\n",
-      "1044    0.0\n",
-      "1045    0.0\n",
-      "1046    0.0\n",
-      "1047    0.0\n",
-      "1048    0.0\n",
-      "1049    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "371    0.0\n",
-      "372    0.0\n",
-      "373    0.0\n",
-      "374    0.0\n",
-      "375    0.0\n",
-      "376    0.0\n",
-      "377    0.0\n",
-      "Name: new_cases_per_million, dtype: float64\n",
-      "1001    0.0\n",
-      "1002    0.0\n",
-      "1003    0.0\n",
-      "1004    0.0\n",
-      "1005    0.0\n",
-      "1006    0.0\n",
-      "1007    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "1099    0.0\n",
-      "1100    0.0\n",
-      "1101    0.0\n",
-      "1102    0.0\n",
-      "1103    0.0\n",
-      "1104    0.0\n",
-      "1105    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "245    0.0\n",
-      "246    0.0\n",
-      "247    0.0\n",
-      "248    0.0\n",
-      "249    0.0\n",
-      "250    0.0\n",
-      "251    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "1162    0.0\n",
-      "1163    0.0\n",
-      "1164    0.0\n",
-      "1165    0.0\n",
-      "1166    0.0\n",
-      "1167    0.0\n",
-      "1168    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "1183    0.0\n",
-      "1184    0.0\n",
-      "1185    0.0\n",
-      "1186    0.0\n",
-      "1187    0.0\n",
-      "1188    0.0\n",
-      "1189    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "1155    0.0\n",
-      "1156    0.0\n",
-      "1157    0.0\n",
-      "1158    0.0\n",
-      "1159    0.0\n",
-      "1160    0.0\n",
-      "1161    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "1169    0.0\n",
-      "1170    0.0\n",
-      "1171    0.0\n",
-      "1172    0.0\n",
-      "1173    0.0\n",
-      "1174    0.0\n",
-      "1175    0.0\n",
-      "Name: new_cases_per_million, dtype: float64\n",
-      "1169    0.0\n",
-      "1170    0.0\n",
-      "1171    0.0\n",
-      "1172    0.0\n",
-      "1173    0.0\n",
-      "1174    0.0\n",
-      "1175    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n",
-      "1281    0.0\n",
-      "1282    0.0\n",
-      "1283    0.0\n",
-      "1284    0.0\n",
-      "1285    0.0\n",
-      "1286    0.0\n",
-      "1287    0.0\n",
-      "Name: new_cases_per_million, dtype: float64\n",
-      "1281    0.0\n",
-      "1282    0.0\n",
-      "1283    0.0\n",
-      "1284    0.0\n",
-      "1285    0.0\n",
-      "1286    0.0\n",
-      "1287    0.0\n",
-      "Name: new_deaths_per_million, dtype: float64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "applied_cols = list(df.columns)\n",
     "df_group_iso = df.groupby([\"iso_code\"])\n",
@@ -325,27 +78,24 @@
     "for col_name, col_data in df.iteritems():\n",
     "    if col_name == \"iso_code\" or col_name==\"continent\":\n",
     "        continue\n",
-    "    # replace nan with country avg\n",
-    "    df[col_name] = df_group_iso[col_name].apply(lambda x: x.fillna(x.mean()))\n",
-    "    # replace nan with continent avg\n",
-    "    df[col_name] = df_group_cont[col_name].apply(lambda x: x.fillna(x.mean()))\n",
+    "    # replace nan with country median\n",
+    "    df[col_name] = df_group_iso[col_name].apply(lambda x: x.fillna(x.median()))\n",
+    "    # replace nan with continent median\n",
+    "    df[col_name] = df_group_cont[col_name].apply(lambda x: x.fillna(x.median()))\n",
     "\n",
-    "df_group_cont_mean = df_group_cont.mean()\n",
-    "# print(df_group_cont_mean)\n",
+    "# Only replace zero values when the entire column of the country is 0. This is because countries like Vietnam have days where no deaths are recorded, but other days still record a positive number. This is different to countries where no death numbers are recorded.\n",
+    "df_group_cont_med = df_group_cont.median()\n",
     "for col_name, col_data in df_group_iso:    \n",
     "    for col in col_data:\n",
     "        if (col_data[col] == 0).all():\n",
-    "            # print(col, col_data[col], col_name)\n",
     "            target = df.loc[df[\"iso_code\"] == col_name]\n",
-    "            # print(target, target[\"continent\"].iloc[0])\n",
-    "            # print(target[col])\n",
-    "            df.loc[df[\"iso_code\"] == col_name, col] = target[col].replace(0, df_group_cont_mean.at[target[\"continent\"].iloc[0], col])\n",
+    "            df.loc[df[\"iso_code\"] == col_name, col] = target[col].replace(0, df_group_cont_med.at[target[\"continent\"].iloc[0], col])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
